<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textColor="#0E0E0E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/buttonAdditionActivity"
        android:layout_width="229dp"
        android:layout_height="71dp"
        android:text="@string/open_addition_activity_button_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtractionActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <Button
        android:id="@+id/buttonSubtractionActivity"
        android:layout_width="229dp"
        android:layout_height="71dp"
        android:text="@string/open_subtraction_activity_button_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiplicationActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdditionActivity" />

    <Button
        android:id="@+id/buttonMultiplicationActivity"
        android:layout_width="229dp"
        android:layout_height="71dp"
        android:text="@string/open_multiplication_activity_button_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivisionActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtractionActivity" />

    <Button
        android:id="@+id/buttonDivisionActivity"
        android:layout_width="229dp"
        android:layout_height="71dp"
        android:text="@string/open_division_activity_button_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonChallengeActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplicationActivity" />


    <Button
        android:id="@+id/buttonChallengeActivity"
        android:layout_width="229dp"
        android:layout_height="71dp"
        android:text="@string/open_challenge_activity_button_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivisionActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>